src/compiler/tests/valid/valid_program3/valid_program3.klt
val llueve: Boolean = false;
val haceSol: Boolean = true;

fun comprobarTemperatura(temp: Int) : String {
    var mensaje: String = "";

    if(temp < 10) {
        mensaje = "Hace mucho frío";
    } else {
        if(temp < 15) {
            mensaje = "Hace poco frío";
        } else {
            if(temp < 25) {
                mensaje = "Hace una temperatura normal";
            } else {
                if(temp < 30) {
                    mensaje = "Hace poco calor";
                } else{
                    mensaje = "Hace mucho calor";
                }
            }
        }
    }

    return mensaje;
}

fun calcularKel (temp: Int; texto: String) : None {
    temp = temp + 273;
    print(texto);
}

fun main(): None {

    val piernaRota: Boolean = false;
    val tengoCoche: Boolean = true;
    var conductor: String = "";
    var jugadores: Int = 5;

    if (!piernaRota) {
        conductor = "Yo";

        if (llueve and  haceSol and !piernaRota) {
            print("Voy a jugar el partido de futbol");
        }

        if (!llueve or tengoCoche and !haceSol) {
            print("No voy a jugar a futbol");
        }
    } else {
        conductor = "Mi madre";

        if (llueve and  haceSol and piernaRota) {
            print("Me voy al cine");
        }

        if (!llueve and !(tengoCoche and !haceSol)) {
            print("No voy al cine");
        }
    }

    if (conductor == "Mi madre") {
        print("Mi madre me cuida mucho");
    }
    comprobarTemperatura(40);
    print("El conductor es:");
    print(conductor);

    calcularKel(10, "La temperatura actual en Kelvin es:");
}