src/compiler/tests/invalid/invalid_program3/invalid_program3.klt
val llueve: Boolean = false;
val haceSol: Boolean = true;

fun comprobarTemperatura(temp: Int) : None {
    var mensaje: String = "";

    if(temp < true) { // ERROR DE COMPARACION
        mensaje = "Hace mucho frío";
    } else {
        if(temp < 15) {
            mensaje = "Hace poco frío";
        } else {
            if(temp < 25) {
                mensaje = "Hace una temperatura normal";
            } else {
                if(temp < 30) {
                    mensaje = "Hace poco calor";
                } else{
                    mensaje = "Hace mucho calor";
                }
            }
        }
    }

    return mensaje;
}

fun calcularKel (temp: Int) : Int {
    temp = temp + 273;
    return temp;
}

//ERROR_LEXICO

fun main(): None {

    val piernaRota: String = false; // ERROR DE TIPO
    val tengoCoche: Boolean = true;
    var conductor: String = "";
    var jugadores: Int = 5;

    if (!piernaRota) {
        conductor = 3; // ERROR DE TIPO

        if (llueve and  haceSol and conductor) { // ERROR DE EXPRESION
            print("Voy a jugar el partido de futbol");
        }

        if (!llueve or tengoCoche and !haceSol) {
            print("No voy a jugar a futbol");
        }
    } else {
        conductor = "Mi madre";

        if (llueve and  haceSol and piernaRota) {
            print("Me voy al cine");
        }

        if (!llueve and !(tengoCoche and !haceSol)) {
            print("No voy al cine");
        }
    }

    if (conductor == "Mi madre") {
        print("Mi madre me cuida mucho");
    }

    comprobarTemperatura(); // FALTA PARAMETROS
    print("El conductor es", conductor);

    calcularFahr(10); // ERROR FALTA DECLARAR FUNCION
}